force-app/main/default/objects/XLSX_Reader_Config__mdt/XLSX_Reader_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for XLSX Reader operations.</description>
    <label>XLSX Reader Config</label>
    <pluralLabel>XLSX Reader Configs</pluralLabel>
</CustomObject>