force-app/main/default/objects/XLSX_Reader_Config__mdt/fields/Async_Threshold_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Async_Threshold_Bytes__c</fullName>
    <defaultValue>500000</defaultValue>
    <label>Async Threshold Bytes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>