force-app/main/default/objects/XLSX_Reader_Config__mdt/fields/Empty_Result_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Empty_Result_Behaviour__c</fullName>
    <description>Only consulted by aggregate row handlers (e.g. AggregateRowHandler) when no data rows were found. Left blank, each aggregate function applies its own sensible default: Zero for SUM/COUNT, Null for MIN/MAX/AVERAGE. Set explicitly to override that default, or to Skip to suppress the result-handler write-back entirely.</description>
    <label>Empty Result Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zero</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>Skip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>