force-app/main/default/objects/XLSX_Reader_Config__mdt/fields/Error_Handling_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Error_Handling_Behavior__c</fullName>
    <label>Error Handling Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Log Error</fullName>
                <default>true</default>
                <label>Log Error</label>
            </value>
            <value>
                <fullName>Throw Exception</fullName>
            </value>
            <value>
                <fullName>Fail Silently</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>