force-app/main/default/objects/XLSX_Reader_Config__mdt/fields/Execution_Mode__c.field-meta.xml
<CustomField>
    <fullName>Execution_Mode__c</fullName>
    <label>Execution Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync</fullName>
                <default>true</default>
                <label>Sync</label>
            </value>
            <value>
                <fullName>Async</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>