force-app/main/default/objects/XLSX_Reader_Config__mdt/fields/Header_Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Header_Row_Number__c</fullName>
    <description>The literal Excel row number (as shown in Excel's own row gutter) that holds the column headers. Blank defaults to row 1. Set this when the source table doesn't start at the very top of the sheet - e.g. a title banner or blank rows above the real header row. Consumed by SObjectCreatorRowHandler and AggregateRowHandler; a custom row handler receives every row's real number directly and can apply its own header-detection logic instead.</description>
    <label>Header Row Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>