force-app/main/default/objects/XLSX_Reader_Config__mdt/fields/Hidden_Row_Handling__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Row_Handling__c</fullName>
    <label>Hidden Row Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
                <default>true</default>
                <label>Include</label>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>