force-app/main/default/objects/XLSX_Reader_Config__mdt/fields/Max_Row_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Max_Row_Threshold__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Max Row Threshold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>