force-app/main/default/objects/XLSX_Reader_Config__mdt/fields/Result_Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Result_Handler_Class__c</fullName>
    <description>Apex class implementing IXLSXResultHandler that persists the result built by Row_Handler_Class__c (e.g. DatabaseInsertResultHandler, FieldWriteBackResultHandler, or a custom class). Set independently from Row_Handler_Class__c - the two roles are never assumed to be implemented by the same class.</description>
    <label>Result Handler Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>