force-app/main/default/objects/XLSX_Reader_Config__mdt/fields/Row_Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Row_Handler_Class__c</fullName>
    <description>Apex class implementing IXLSXRowHandler that turns parsed rows into an in-memory result (e.g. SObjectCreatorRowHandler, AggregateRowHandler, or a custom class). This is a distinct role from Result_Handler_Class__c: the row handler builds the result, the result handler persists it. Both must be set independently - a single class is not assumed to implement both interfaces.</description>
    <label>Row Handler Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>